--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
-    "browser-sync": "^2.23.6"
+    "bower": "^1.8.2",
+    "browser-sync": "^2.23.6",
+    "polymer-cli": "^1.6.0",
+    "stylus": "^0.54.5"
   }
 }
