--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,7 +31,7 @@ jobs:
 
       - run:
           name: Build polymer project
-          command: .circleci/node_modules/polymer-cli/bin/polymer.js build
+          command: .circleci/node_modules/polymer-cli/bin/polymer.js build --name default
       - store_artifacts:
           path: "build"
 
