--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,6 +32,7 @@ jobs:
       - run:
           name: Build polymer project
           command: .circleci/node_modules/polymer-cli/bin/polymer.js build --name default
+          no_output_timeout: 30m
       - store_artifacts:
           path: "build"
 
