--- a/bower.json
+++ b/bower.json
@@ -23,7 +23,16 @@
     "iron-selector": "PolymerElements/iron-selector#^2.0.0",
     "paper-icon-button": "PolymerElements/paper-icon-button#^2.0.0",
     "polymer": "Polymer/polymer#^2.0.0",
-    "webcomponentsjs": "webcomponents/webcomponentsjs#^1.0.0"
+    "webcomponentsjs": "webcomponents/webcomponentsjs#^1.0.0",
+    "paper-dropdown-menu": "PolymerElements/paper-dropdown-menu#^2.0.2",
+    "paper-item": "PolymerElements/paper-item#^2.1.0",
+    "paper-listbox": "PolymerElements/paper-listbox#^2.0.0",
+    "neon-animation": "PolymerElements/neon-animation#^2.2.0",
+    "paper-spinner": "PolymerElements/paper-spinner#^2.1.0",
+    "iron-icons": "PolymerElements/iron-icons#^2.1.0",
+    "paper-input": "PolymerElements/paper-input#^2.1.1",
+    "udes-functions-mixins": "UdeSElements/udes-functions-mixins#^3.0.0",
+    "fuse": "krisk/fuse#^3.2.0"
   },
   "resolutions": {
     "polymer": "^2.0.0"
