--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,5 +56,5 @@ jobs:
           working_directory: "build/default"
           command: |
             git add -A
-            git commit --allow-empty -m "Automated CI deployment [$CIRCLE_BRANCH: $CIRCLE_SHA1]"
+            git commit --allow-empty -m "Automated CI deployment [$CIRCLE_BRANCH: $CIRCLE_SHA1]\n\n$CIRCLE_BUILD_URL\n[ci skip]"
             git push --force origin gh-pages
