--- a/bower.json
+++ b/bower.json
@@ -32,7 +32,9 @@
     "iron-icons": "PolymerElements/iron-icons#^2.1.0",
     "paper-input": "PolymerElements/paper-input#^2.1.1",
     "udes-functions-mixins": "UdeSElements/udes-functions-mixins#^3.0.0",
-    "fuse": "krisk/fuse#^3.2.0"
+    "fuse": "krisk/fuse#^3.2.0",
+    "paper-toggle-button": "PolymerElements/paper-toggle-button#^2.1.0",
+    "paper-radio-group": "PolymerElements/paper-radio-group#^2.1.0"
   },
   "resolutions": {
     "polymer": "^2.0.0"
