--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,7 +56,7 @@ jobs:
           working_directory: "build/default"
           command: |
             git add -A
-            git commit -m "Automated CI deployment [$CIRCLE_SHA1]
+            git commit --allow-empty -m "Automated CI deployment [$CIRCLE_SHA1]
 
             Build URL: $CIRCLE_BUILD_URL
             Built form branch **$CIRCLE_BRANCH** on `date` [ci skip]"
